# card-rpg

./: .gitignore  Cargo.toml  README.md  treetest.txt
assets/: assets.md  temp_health.png~
card-experiments/: Cargo.toml
card-experiments/src/: card-library.txt  card.rs  game_structs.rs  main.rs
card-rpg/: Cargo.toml
card-rpg/src/: game_manager.rs  main.rs
card-rpg/src/events/: event_subsystem.rs
card-rpg/src/scenes/: battle.rs  menu.rs  mod.rs  overworld.rs
card-rpg/src/video/: gfx.rs  mod.rs  sdl_core.rs  video_subsystem.rs
card-server/: Cargo.toml
card-server/src/: main.rs
credits/: Cargo.toml
credits/examples/: credits.rs
credits/src/: gfx.rs  lib.rs  main.rs
src/: game_manager.rs  main.rs
src/AI/: ai_structs.rs  minimax.rs
src/NPC/: npc.rs  npc_loader.json
src/NPCs/: npc.rs  npc_loader.json
src/ai/: ai_structs copy.rs  ai_structs.rs  minimax.rs  mod.rs  node.rs
src/cards/: battle_enums.rs  battle_system.rs  battler-library.txt  card-library.txt  card_system.rs  game_structs.rs  mod.rs
src/events/: event_subsystem.rs  mod.rs
src/scenes/: battle.rs  credits.rs  menu.rs  mod.rs  npc_loader - Copy.txt  npc_loader.json  online.rs  options.rs  overworld (copy).rs  overworld.rs
src/video/: gfx.rs  mod.rs  sdl_core.rs  text.rs
