[package]
name = "card-rpg"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] } 

[dependencies.sdl2]
version = "^0.34"
default-features = false
features = ["ttf", "image", "mixer"]
