[package]
name = "sdl_rust"
version = "0.1.1"
authors = ["Nick Farnan <nlf4@pitt.edu>","Jacob Bonhomme <jcb169@pitt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","mixer"]

[dev-dependencies]
rand = "0.8.0"
